[package]
name = "terracing"
version = "0.1.0"
authors = ["Christopher Esterhuyse <christopher.esterhuyse@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noise = "0.6.0"
png = "0.16.2"
rand = { version = "0.7", features = ["small_rng"] }
rayon = "1.3.0"
more-asserts = "0.2.1"